sonor + dependency-check 笔记未完成

--- a/dependency-simplify/src/main/resources/application.properties
+++ b/dependency-simplify/src/main/resources/application.properties
@@ -10,3 +10,10 @@ spring.datasource.password=123
 #mybatis.type-aliases-package=com.test.entity
 #mybatis.configuration.use-generated-keys=true
 #mybatis.configuration.map-underscore-to-camel-case=true
+sonar.dependencyCheck.reportPath=dependency-check-report.html
+sonar.dependencyCheck.htmlReportPath=dependency-check-report.html
+
+#sonar.dependencyCheck.severity.blocker=9.0
+#sonar.dependencyCheck.severity.critical=7.0
+#sonar.dependencyCheck.severity.major=4.0
+#sonar.dependencyCheck.severity.minor=0.0
